--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -15,8 +15,9 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">Home</a>
+          <a class="nav-link" aria-current="page" href="/">Home</a>
         </li>
+        <% if(locals.user){%>
         <li class="nav-item">
           <a class="nav-link" href="#">Add Blog</a>
         </li>
@@ -31,10 +32,24 @@
             Sachin Doddahubballi
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="/user/logout">Logout</a></li>
           </ul>
         </li>
+        <%} else {%>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/signup">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/user/signin">Sign In</a>
+        </li>
+        <%}%>
       </ul>
     </div>
   </div>
 </nav>
+
+<% if (locals.error) { %>
+<div class="container mt-4">
+  <div class="alert alert-danger" role="alert"><%= locals.error %></div>
+</div>
+<% } %>
