--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,12 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">The Writing Corner</a>
+    <a
+      class="navbar-brand"
+      href=""
+      style="font-family: 'Tangerine', cursive; font-size: 1.5rem;"
+    >
+      The Writing Corner
+    </a>
     <button
       class="navbar-toggler"
       type="button"
